# stocks_patterns

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml  setup.py  test_mlflow_api.py  tox.ini
.dvc/: config
.github/: README.md
.github/workflows/: black_check.yaml  commit.yaml  create_docs.yaml  flake8_check.yaml  pre-commit.yaml
data/raw/: minutes_111.csv.dvc
docker/: docker-compose.yml  nginx.conf
docker/mlflow_image/: Dockerfile
docs/: Makefile  commands.rst  conf.py  description.rst  index.rst  make.bat
src/data/: load_data_from_moex.py  load_from_moex.py  preprocessing.py
src/logger/: log_settings.py
src/models/: clustering.py  metrics.py  optimize.py
workflows/: kshape_clustering.py  load_moex_stocks_candles.py  optuna_optimize.py  params.yaml  slice_moex_trading_ts.py
