[tool.poetry]
name = "stocks-patterns"
version = "0.1.0"
description = "Searching for patterns on stock price charts"
repository = "https://github.com/fasthydra/stocks_patterns"
authors = ["stocks-patterns_team <fasthydra@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.2"
h5py = "^3.8.0"
plotly = "^5.14.1"
scikit-learn = "^1.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"
pre-commit = "^3.2.2"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
sphinx = "^6.1.3"
apimoex = "^1.3.0"
tqdm = "^4.65.0"
click = "^8.1.3"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

